--- a/CapstoneV1.2/nbproject/project.properties
+++ b/CapstoneV1.2/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.mssql-jdbc-6.2.2.jre7.jar=C:\\Users\\black\\OneDrive\\shared\\Documents\\database\\DatabaseExample\\DatabaseExample\\mssql-jdbc-6.2.2.jre7.jar
 file.reference.ojdbc6.jar=../../../DatabaseExample/ojdbc6.jar
 file.reference.ojdbc6.jar-1=C:\\Users\\black\\OneDrive\\shared\\Documents\\database\\DatabaseExample\\DatabaseExample\\ojdbc6.jar
+file.reference.ojdbc8.jar=C:\\Users\\hchal\\OneDrive - James Madison University (Dukes)\\CIS 484\\CIS 484\\ojdbc8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.ojdbc6.jar-1}:\
-    ${file.reference.mssql-jdbc-6.2.2.jre7.jar}
+    ${file.reference.mssql-jdbc-6.2.2.jre7.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
